--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "styled-components": "^5.3.3"
   }
 }
