--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "src": "^1.1.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "validator": "^13.7.0"
   }
 }
