--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kathfree3/priceright#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
