--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "priceright",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "ESE 450 Senior Design",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -14,20 +14,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kathfree3/priceright/issues"
-  },
-  "homepage": "https://github.com/kathfree3/priceright#readme",
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.3",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "src": "^1.1.2",
     "styled-components": "^5.3.3",
     "validator": "^13.7.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
